<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    tools:context=".Splash">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/img1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".3"
        app:layout_constraintHorizontal_bias=".3"
        android:contentDescription="@string/immagine_prima_schermata" />

    <TextView
        android:id="@+id/contagiAPP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contagiapp"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintHorizontal_bias="0"
        android:layout_marginTop="25dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent"

        />

    <TextView
        android:id="@+id/splashLogin1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:onClick="splashAuth"
        android:text="@string/loginSplash"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/contagiAPP"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toEndOf="@+id/contagiAPP"

        app:layout_constraintTop_toTopOf="@+id/contagiAPP" />

    <TextView
        android:id="@+id/TitoloSchermata"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lorem"
        android:textSize="42sp"
        android:fontFamily="sans-serif-light"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintVertical_bias="0"
        android:layout_marginEnd="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView"

        />


    <TextView
        android:id="@+id/sottotitoloSchermata"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ipsum"
        android:textSize="56sp"
        android:fontFamily="sans-serif-condensed"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintVertical_bias="0"
        android:layout_marginEnd="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/TitoloSchermata"
        app:layout_constraintTop_toBottomOf="@+id/TitoloSchermata"

        />

    <TextView
        android:id="@+id/descrizioneschermata"
        android:layout_width="234dp"
        android:layout_height="135dp"
        android:layout_marginTop="5dp"
        android:text="@string/faketext"
        android:textSize="16sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/sottotitoloSchermata"
        app:layout_constraintTop_toBottomOf="@+id/sottotitoloSchermata"
        app:layout_constraintVertical_bias="0.184"


        />

    <ImageView
        android:layout_width="50dp"
        android:layout_height="10dp"
        android:src="@drawable/tab1"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintVertical_bias=".6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/descrizioneschermata"
        app:layout_constraintTop_toBottomOf="@+id/descrizioneschermata"
        android:layout_marginStart="5dp"
        android:contentDescription="@string/tab" />




</androidx.constraintlayout.widget.ConstraintLayout>